--- a/src/main/resources/view/style.css
+++ b/src/main/resources/view/style.css
@@ -6,18 +6,20 @@
 }
 
 .bot-dialog {
-    -fx-background-color: #f1f1f1;
+    -fx-font-family: "Comic Sans MS";
+    -fx-background-color: rgba(203, 163, 255, 0.2);
     -fx-text-fill: #333333;
     -fx-padding: 8px 12px;
     -fx-background-radius: 8;
 }
 
 .error-dialog {
-    -fx-background-color: #ffe6e6;
-    -fx-text-fill: #d32f2f;
+    -fx-background-color: rgba(255, 0, 0, 0.2);
+    -fx-text-fill: #8B0000;
     -fx-font-weight: bold;
     -fx-padding: 8px 12px;
     -fx-background-radius: 8;
     -fx-border-color: #d32f2f;
     -fx-border-width: 1px;
+    -fx-font-size: 18px
 }
