Change colour of dialog boxes

--- a/src/main/resources/view/style.css
+++ b/src/main/resources/view/style.css
@@ -1,16 +1,18 @@
 .user-dialog {
-    -fx-background-color: #e0f7fa;
+    -fx-background-color: rgba(203, 163, 255, 0.2);
     -fx-text-fill: #00796b;
-    -fx-padding: 8px 12px;
-    -fx-background-radius: 8;
+    -fx-padding: 10px 14px;
+    -fx-wrap-text: true;
+    -fx-background-radius: 20;
 }
 
 .bot-dialog {
     -fx-font-family: "Comic Sans MS";
-    -fx-background-color: rgba(203, 163, 255, 0.2);
+    -fx-background-color: rgba(250, 218, 221, 0.4);
     -fx-text-fill: #333333;
-    -fx-padding: 8px 12px;
-    -fx-background-radius: 8;
+    -fx-padding: 10px 14px;
+    -fx-wrap-text: true;
+    -fx-background-radius: 20;
 }
 
 .error-dialog {
@@ -24,4 +26,7 @@
     -fx-font-size: 18px
 }
 
-
+#dialogContainer {
+    -fx-spacing: 12;   /* space between messages */
+    -fx-padding: 12;   /* padding from edges */
+}
